# rag

./: .gitignore  README.md  pyproject.toml  rag_pdf.ipynb  rag_pdf_local.ipynb  rag_pdf_qdrant.ipynb  utils.py
