[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Gonzalo Cordova <gonzalo.cordova@glovoapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pip = "^24.0"
install = "^1.3.5"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
pypdf = "^4.2.0"
pathlib = "^1.0.1"
docarray = "^0.40.0"
pydantic = "1.10.8"
langchain-openai = "^0.1.8"
qdrant-client = "^1.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
